# PathfinderPlusPlus

./: .gitignore  CHANGELOG.txt  CMakeLists.txt  README.md  pathfinder.pro
src/: app.cpp  app.h  console.cpp  console.h  direction.cpp  direction.h  flag.cpp  flag.h  main.cpp  map.cpp  map.h  mousedrawer.cpp  mousedrawer.h  pathfinder.cpp  pathfinder.h  perso.h
src/graphics/: console.cpp  console.h  mapgraphics.cpp  mapgraphics.h  pathgraphics.cpp  pathgraphics.h
src/graphics/components/: animatedsprite.cpp  animatedsprite.h
src/interface/: button.cpp  button.h  buttons.cpp  buttons.h  console.cpp  console.h  pathinfo.cpp  pathinfo.h  stk_fileopenwrapper.cpp  stk_fileopenwrapper.h
src/path/: pathcontext.cpp  pathcontext.h  pathfinder.cpp  pathfinder.h
src/util/: dialogs.cpp  dialogs.h  direction.cpp  direction.h  vec2.h
